@@ -4,6 +4,7 @@ git-annex (10.20250116) UNRELEASED; urgency=medium
   * addcomputed: New command, adds a file that is generated by a compute
     special remote.
   * recompute: New command, recomputes computed files.
+  * findcomputed: New command, displays information about computed files.
   * Support help.autocorrect settings "prompt", "never", and "immediate".
   * Allow setting remote.foo.annex-tracking-branch to a branch name
     that contains "/", as long as it's not a remote tracking branch.
